SEGFAULT when viewing Movie Clip as a Background Image in a Camera #79484

Closed
opened 2020-08-03 12:01:05 +02:00 by Pavel Duong · 11 comments

System Information
Operating system: Clear Linux (Build ID: 33060); Kernel 5.5.15-930.native
Graphics card: Intel(R) HD Graphics 4000 (IVB GT2)
!!This error occurs even with blender-softwaregl.!!

Blender Version
Broken: 7cd2c1fd2e, 144f780c71
Worked: LTS 2.83.3
Caused by 97b597cd04

Short description of error

Blender crashes when a movie clip is set as background image in a camera and viewing through said camera. Setting an image as the background image still works as intended.

Exact steps for others to reproduce the error

Load a video as a background image in a camera and view through it. I've attached a video just in case I didn't express it correctly. From my tests it doesn't matter which video is used.

blender.crash.txt
blender_crash.mp4

**System Information** Operating system: Clear Linux (Build ID: 33060); Kernel 5.5.15-930.native Graphics card: Intel(R) HD Graphics 4000 (IVB GT2) ***!!This error occurs even with `blender-softwaregl.`!!*** **Blender Version** Broken: 7cd2c1fd2e7a, 144f780c71ed Worked: LTS 2.83.3 Caused by 97b597cd04 **Short description of error** Blender crashes when a movie clip is set as background image in a camera and viewing through said camera. Setting an image as the background image still works as intended. **Exact steps for others to reproduce the error** Load a video as a background image in a camera and view through it. I've attached a video just in case I didn't express it correctly. From my tests it doesn't matter which video is used. [blender.crash.txt](https://archive.blender.org/developer/F8740858/blender.crash.txt) [blender_crash.mp4](https://archive.blender.org/developer/F8740863/blender_crash.mp4)
Author

Added subscriber: @vignette

Added subscriber: @vignette
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Confirmed, checking...

Confirmed, checking...
Member

Git bisect gives 97b597cd04 as the culprit commit

gpu_get_movieclip_gputexture returns NULL in BKE_movieclip_get_gpu_texture

1  BKE_movieclip_get_gpu_texture       movieclip.c      1905 0x3331d4b 
2  image_camera_background_texture_get overlay_image.c  206  0x3ac5791 
3  OVERLAY_image_camera_cache_populate overlay_image.c  336  0x3ac5e5f 
4  OVERLAY_camera_cache_populate       overlay_extra.c  1262 0x3ac1a4a 
5  OVERLAY_cache_populate              overlay_engine.c 387  0x3abb4d0 
6  drw_engines_cache_populate          draw_manager.c   1015 0x3a694a5 
7  DRW_draw_render_loop_ex             draw_manager.c   1489 0x3a6a907 
8  DRW_draw_view                       draw_manager.c   1404 0x3a6a4f9 
9  view3d_draw_view                    view3d_draw.c    1595 0x45900ba 
10 view3d_main_region_draw             view3d_draw.c    1617 0x4590161 
11 ED_region_do_draw                   area.c           538  0x3ebae66 
12 wm_draw_window_offscreen            wm_draw.c        697  0x36e077f 
13 wm_draw_window                      wm_draw.c        823  0x36e0d05 
14 wm_draw_update                      wm_draw.c        1027 0x36e1344 
15 WM_main                             wm.c             481  0x36dde54 
16 main                                creator.c        546  0x3285c63 
Git bisect gives 97b597cd04 as the culprit commit `gpu_get_movieclip_gputexture` returns NULL in `BKE_movieclip_get_gpu_texture` ``` 1 BKE_movieclip_get_gpu_texture movieclip.c 1905 0x3331d4b 2 image_camera_background_texture_get overlay_image.c 206 0x3ac5791 3 OVERLAY_image_camera_cache_populate overlay_image.c 336 0x3ac5e5f 4 OVERLAY_camera_cache_populate overlay_extra.c 1262 0x3ac1a4a 5 OVERLAY_cache_populate overlay_engine.c 387 0x3abb4d0 6 drw_engines_cache_populate draw_manager.c 1015 0x3a694a5 7 DRW_draw_render_loop_ex draw_manager.c 1489 0x3a6a907 8 DRW_draw_view draw_manager.c 1404 0x3a6a4f9 9 view3d_draw_view view3d_draw.c 1595 0x45900ba 10 view3d_main_region_draw view3d_draw.c 1617 0x4590161 11 ED_region_do_draw area.c 538 0x3ebae66 12 wm_draw_window_offscreen wm_draw.c 697 0x36e077f 13 wm_draw_window wm_draw.c 823 0x36e0d05 14 wm_draw_update wm_draw.c 1027 0x36e1344 15 WM_main wm.c 481 0x36dde54 16 main creator.c 546 0x3285c63 ```
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

CC @fclem

CC @fclem

This issue was referenced by d71cb229d0

This issue was referenced by d71cb229d054bb0482882fa9c0753b495179d7cb
Member

Added subscriber: @LukasStockner

Added subscriber: @LukasStockner
Lukas Stockner self-assigned this 2020-08-05 02:38:46 +02:00
Member

Should be fixed by D8469.

Should be fixed by [D8469](https://archive.blender.org/developer/D8469).
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.91 milestone 2023-02-08 16:21:41 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79484
No description provided.