Fix T79484: Crash when viewing Movie Clip as a Background Image in a Camera

This seems to be caused by a change to the logic of movieclip_get_gputexture_ptr in rB97b597c.

Differential Revision: https://developer.blender.org/D8469